[package]
name = "sundered-tiles"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
game = { path = "../game" }

macroquad = { version = "0.2.9", optional = true }
image = { version = "0.23", optional = true }

raylib = { version = "3.5", optional = true }


[features]
default = []
platform-macroquad = ["macroquad", "image"]
platform-raylib-rs = ["raylib"]
